--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cookieparser": "^0.1.0",
+    "highlight.js": "^10.0.2",
     "js-cookie": "^2.2.1",
+    "markdown-it": "^10.0.0",
     "nuxt": "^2.12.2"
   }
 }
